--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,19 @@
     "terminal.integrated.fontSize": 12,
     "editor.accessibilitySupport": "off",
     "window.zoomLevel": 0,
-    "workbench.tree.indent": 20,
+    "workbench.tree.indent": 15,
     "explorer.compactFolders": false,
     "workbench.colorCustomizations": {
-        "tree.indentGuidesStroke": "#48ff00"
+        "tree.indentGuidesStroke": "#3cff00"
     },
+    "clang-format.executable": "clang-format",
+    "clang-format.style": "file",
+    "clang-format.fallbackStyle": "Google",
+    "clang-format.formatOnSave": true,
+    "clang-format.formatOnType": true,
+    "clang-format.arguments": [
+        "-assume-filename=${workspaceFolder}/.clang-format"
+    ],
     "github.copilot.enable": {
         "*": true,
         "yaml": false,
@@ -19,11 +27,93 @@
         "editor.formatOnType": true
     },
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Visual Studio Dark - C++",
+    "workbench.colorTheme": "Default Dark Modern",
     "editor.fontFamily": "'Cascadia Code', Monaco, Consolas, Monaco, 'Courier New', monospace",
     "files.autoSave": "afterDelay",
     "git.openRepositoryInParentFolders": "never",
     "[cpp]": {
         "editor.defaultFormatter": "ms-vscode.cpptools"
+    },
+    "python.autoComplete.extraPaths": [
+        "/opt/ros/foxy/lib/python3.8/site-packages",
+        "/opt/carla-simulator/PythonAPI/carla/dist/carla-0.9.14-py3.8-linux-x86_64.egg",
+        "/opt/carla-simulator/PythonAPI/carla"
+    ],
+    "python.analysis.extraPaths": [
+        "/opt/ros/foxy/lib/python3.8/site-packages",
+        "/opt/carla-simulator/PythonAPI/carla/dist/carla-0.9.14-py3.8-linux-x86_64.egg",
+        "/opt/carla-simulator/PythonAPI/carla"
+    ],
+    "C_Cpp.errorSquiggles": "disabled",
+    "files.associations": {
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "csignal": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "array": "cpp",
+        "atomic": "cpp",
+        "strstream": "cpp",
+        "bit": "cpp",
+        "*.tcc": "cpp",
+        "bitset": "cpp",
+        "chrono": "cpp",
+        "codecvt": "cpp",
+        "complex": "cpp",
+        "condition_variable": "cpp",
+        "cstdint": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "vector": "cpp",
+        "exception": "cpp",
+        "algorithm": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "ratio": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "fstream": "cpp",
+        "future": "cpp",
+        "initializer_list": "cpp",
+        "iomanip": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "istream": "cpp",
+        "limits": "cpp",
+        "mutex": "cpp",
+        "new": "cpp",
+        "ostream": "cpp",
+        "shared_mutex": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "thread": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp",
+        "typeindex": "cpp",
+        "typeinfo": "cpp",
+        "valarray": "cpp",
+        "variant": "cpp"
     }
 }
