--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -56,5 +56,6 @@
         "ms-vscode.cpplint",            // cpplint for C++ code linting
         "foxundermoon.shell-format",    // Shell script formatting (useful for ROS and Docker scripts)
         "bbenoist.vagrant"              // Vagrant support (if using virtualized environments)
+        "vscode-icons-team.vscode-icons"    // vs code icons
     ]
 }
