--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -47,6 +47,7 @@
         "jeff-hykin.better-cpp-syntax", // Enhanced C++ syntax highlighting
         "esbenp.prettier-vscode",       // Code formatting for Python and other languages
         "streetsidesoftware.code-spell-checker", // Spell checker for comments and strings
+        "xaver.clang-format"            // format code for C / C++
 
         // Utilities
         "MS-vsliveshare.vsliveshare",   // Live Share for real-time collaboration
