--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,68 +1,57 @@
 {
     "recommendations": [
-        // Docker-related extensions
-        "ms-azuretools.vscode-docker", // Docker integration for building, managing containers
-        "ms-vscode-remote.remote-containers", // connect docker via vs code
-        // C++ development
-        "ms-vscode.cpptools", // C++ IntelliSense, debugging, and code browsing
-        "ms-vscode.cpptools-themes", // Additional themes for C++ language support
-        "ms-vscode.cpptools-extension-pack", // C++ extension pack for advanced development tools
-        "formulahendry.code-runner", // code runner
-        // Make and CMake
-        "ms-vscode.makefile-tools", // Makefile support for building C++ projects
-        "ms-vscode.cmake-tools", // CMake support for C++ projects
-        "twxs.cmake", // CMake language support (syntax highlighting)
-        "josetr.cmake-language-support-vscode", // CMake language support
-        // ROS1/ROS2 development
-        "ms-iot.vscode-ros", // ROS extension for both ROS1 and ROS2
-        "ajshort.ros-snippets", // Snippets for ROS development (ROS1 & ROS2)
-        "tms-vscode.systemd-unit-file", // Systemd Unit file support (for managing ROS nodes as services)
-        "sweilz.ros-snippets", // ROS snippets
-        // Python development
-        "ms-python.isort", // import sorting
-        "ms-python.python", // Python IntelliSense, linting, and debugging
-        "ms-python.vscode-pylance", // Python language server for performance improvements
-        "ms-python.debugpy", // Python debugger integration
-        "ms-toolsai.jupyter", // jupyter support
-        "ms-toolsai.vscode-jupyter-cell-tags", // Jupyter cell tags support for Python notebooks
-        "ms-toolsai.vscode-jupyter-slideshow", // Slideshow extension for presenting Jupyter notebooks
-        "ms-toolsai.jupyter-keymap", //  provides keymaps for notebooks
-        // Git and version control
-        "eamodio.gitlens", // GitLens for enhanced Git capabilities
-        "mhutchie.git-graph", // Visual Git Graph for branch visualization
-        "github.vscode-pull-request-github", // GitHub Pull Requests and Issues support
-        "GitHub.vscode-github-actions", // github actions
-        // File type support
-        "DotJoshJohnson.xml", // XML language support
-        "redhat.vscode-xml", // redhat xml support
-        "redhat.vscode-yaml", // YAML language support
-        "azurity.pcd-viewer", // Point Cloud Data (.pcd) viewer extension
-        "tatsy.vscode-3d-preview", // 3d model preview
-        "smilerobotics.urdf", // urdf file support
-        // Remote development
-        "ms-vscode-remote.remote-ssh", // Remote SSH support (for working on remote Ubuntu machines)
-        "ms-vscode-remote.remote-containers", // Development inside containers (Docker)
-        "ms-vscode-remote.remote-wsl", // Remote WSL support (if using WSL)
-        "ms-vscode-remote.remote-ssh-edit", // Edit files directly via remote SSH connections
-        "ms-vscode.remote-explorer", // Explorer for remote workspaces and servers
-        // Code formatting and quality
-        "jeff-hykin.better-cpp-syntax", // Enhanced C++ syntax highlighting
-        "esbenp.prettier-vscode", // Code formatting for Python and other languages
-        "streetsidesoftware.code-spell-checker", // Spell checker for comments and strings
-        "xaver.clang-format", // format code for C / C++
-        // Documentation
-        "cschlosser.doxdocgen", // create autocomplete comments and Doxygen document for C++
-        // Utilities
-        "MS-vsliveshare.vsliveshare", // Live Share for real-time collaboration
-        "editorconfig.editorconfig", // Maintain consistent coding styles across editors
-        "visualstudioexptteam.vscodeintellicode", // AI-assisted code completion for C++ and Python
-        "VisualStudioExptTeam.intellicode-api-usage-examples", // Examples of API usage with IntelliCode
-        "ms-vscode.cpplint", // cpplint for C++ code linting
-        "foxundermoon.shell-format", // Shell script formatting (useful for ROS and Docker scripts)
-        "bbenoist.vagrant", // Vagrant support (if using virtualized environments)
-        "vscode-icons-team.vscode-icons", // vs code icons
-        "formulahendry.auto-rename-tag", // automatically changes ending name of xml
-        "tomoki1207.pdf", // read pdfs on vs code
-        "ms-dotnettools.vscode-dotnet-runtime" // C# dependency
+        "ms-azuretools.vscode-docker",
+        "ms-vscode-remote.remote-containers",
+        "ms-vscode.cpptools",
+        "ms-vscode.cpptools-themes",
+        "ms-vscode.cpptools-extension-pack",
+        "formulahendry.code-runner",
+        "ms-vscode.makefile-tools",
+        "ms-vscode.cmake-tools",
+        "twxs.cmake",
+        "josetr.cmake-language-support-vscode",
+        "ms-iot.vscode-ros",
+        "ajshort.ros-snippets",
+        "tms-vscode.systemd-unit-file",
+        "sweilz.ros-snippets",
+        "ms-python.isort",
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-python.debugpy",
+        "ms-toolsai.jupyter",
+        "ms-toolsai.vscode-jupyter-cell-tags",
+        "ms-toolsai.vscode-jupyter-slideshow",
+        "ms-toolsai.jupyter-keymap",
+        "eamodio.gitlens",
+        "mhutchie.git-graph",
+        "github.vscode-pull-request-github",
+        "GitHub.vscode-github-actions",
+        "DotJoshJohnson.xml",
+        "redhat.vscode-xml",
+        "redhat.vscode-yaml",
+        "azurity.pcd-viewer",
+        "tatsy.vscode-3d-preview",
+        "smilerobotics.urdf",
+        "ms-vscode-remote.remote-ssh",
+        "ms-vscode-remote.remote-containers",
+        "ms-vscode-remote.remote-wsl",
+        "ms-vscode-remote.remote-ssh-edit",
+        "ms-vscode.remote-explorer",
+        "jeff-hykin.better-cpp-syntax",
+        "esbenp.prettier-vscode",
+        "streetsidesoftware.code-spell-checker",
+        "xaver.clang-format",
+        "cschlosser.doxdocgen",
+        "MS-vsliveshare.vsliveshare",
+        "editorconfig.editorconfig",
+        "visualstudioexptteam.vscodeintellicode",
+        "VisualStudioExptTeam.intellicode-api-usage-examples",
+        "ms-vscode.cpplint",
+        "foxundermoon.shell-format",
+        "bbenoist.vagrant",
+        "vscode-icons-team.vscode-icons",
+        "formulahendry.auto-rename-tag",
+        "tomoki1207.pdf",
+        "ms-dotnettools.vscode-dotnet-runtime"
     ]
 }
