--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,23 +7,16 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
-# Config Dracula Theme
-set -g @dracula-show-fahrenheit false
-set -g @dracula-show-powerline true
-set -g @dracula-show-network false
-set -g @dracula-show-left-icon session
-set -g @dracula-cpu-usage true
-set -g @dracula-ram-usage true
-set -g @dracula-day-month true
-set -g @dracula-military-time true
-set -g @dracula-show-flags true 
 
 # Set 256 colors
 set -s default-terminal 'tmux-256color'
@@ -45,22 +38,24 @@ bind-key C-p run-shell "xclip -o | tmux load-buffer - && tmux paste-buffer"
 
 # turn mouse on
 set -g mouse on
-# restore vim sessions
-# set -g @resurrect-strategy-vim 'session'
-# restore neovim sessions
-# set -g @resurrect-strategy-nvim 'session'
-# restore panes
-# set -g @resurrect-capture-pane-contents 'on'
-# restore last saved environment (automatically)
 set -g @continuum-restore 'on'
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+run-shell ~/.tmux/plugins/tmux-sensible/sensible.tmux
+run-shell ~/.tmux/plugins/tmux-resurrect/resurrect.tmux
+run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
+
+set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
